[gd_scene load_steps=17 format=3 uid="uid://cga8m1ceqm36s"]

[ext_resource type="Texture2D" uid="uid://bgi1wi0033nn1" path="res://images/game/foreground/scoreboard/designs_pt/standard/level.png" id="2_wayj7"]
[ext_resource type="Script" uid="uid://vrly1m7lip0u" path="res://scripts/game/luminext/foreground/scoreboard.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://blvul42mf7ykq" path="res://images/game/foreground/base.png" id="4"]
[ext_resource type="FontFile" uid="uid://c2jju53sahmwr" path="res://fonts/lumifont.ttf" id="4_87auf"]
[ext_resource type="Texture2D" uid="uid://roav4mps5eut" path="res://images/game/foreground/scoreboard/designs_pt/standard/hi-score.png" id="5_geaak"]
[ext_resource type="Texture2D" uid="uid://dle2jgd63ls2u" path="res://images/game/foreground/scoreboard/designs_pt/standard/score.png" id="6_2n3ts"]
[ext_resource type="Texture2D" uid="uid://clbwvk1ycpryc" path="res://images/game/foreground/scoreboard/designs_pt/standard/deleted.png" id="7_ngoxw"]
[ext_resource type="Texture2D" uid="uid://b0ejimhro7cm2" path="res://images/game/foreground/scoreboard/designs_pt/standard/time.png" id="8_hu2ud"]

[sub_resource type="Animation" id="11"]
resource_name = "levelup"
length = 0.75
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("V/Label1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("V/Label1/LevelUp:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("V/Label1/LevelUp:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.75),
"transitions": PackedFloat32Array(0.25, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(5, 0)]
}

[sub_resource type="Animation" id="12"]
resource_name = "nextskin"
length = 0.75
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("V/Label1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("V/Label1/NextSkin:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 0.75),
"transitions": PackedFloat32Array(0.5, 2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("V/Label1/NextSkin:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.75),
"transitions": PackedFloat32Array(0.25, 2, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1), Vector2(5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jjowq"]
_data = {
&"levelup": SubResource("11"),
&"nextskin": SubResource("12")
}

[sub_resource type="AtlasTexture" id="9"]
atlas = ExtResource("4")
region = Rect2(128, 420, 328, 68)

[sub_resource type="AtlasTexture" id="10"]
atlas = ExtResource("4")
region = Rect2(518, 420, 328, 68)

[sub_resource type="LabelSettings" id="LabelSettings_toonj"]
font = ExtResource("4_87auf")
font_size = 24

[sub_resource type="FontVariation" id="FontVariation_qace7"]
base_font = ExtResource("4_87auf")
spacing_bottom = 2

[sub_resource type="LabelSettings" id="LabelSettings_ffg50"]
font = SubResource("FontVariation_qace7")
font_size = 12

[node name="Scoreboard" type="Node2D"]
script = ExtResource("3")

[node name="A" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_jjowq")
}

[node name="V" type="VBoxContainer" parent="."]
texture_filter = 2
offset_left = 1612.0
offset_top = 196.0
offset_right = 1864.0
offset_bottom = 880.0
theme_override_constants/separation = 12
alignment = 1

[node name="Label1" type="TextureRect" parent="V"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("2_wayj7")
expand_mode = 5
stretch_mode = 6

[node name="LevelUp" type="TextureRect" parent="V/Label1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_top = -9.0
offset_right = 220.0
offset_bottom = 37.0
scale = Vector2(5, 1e-05)
pivot_offset = Vector2(110, 24)
texture = SubResource("9")
expand_mode = 5
stretch_mode = 4

[node name="NextSkin" type="TextureRect" parent="V/Label1"]
modulate = Color(1, 1, 1, 0)
self_modulate = Color(0.0703125, 1, 0.782104, 1)
layout_mode = 0
offset_top = -9.0
offset_right = 220.0
offset_bottom = 37.0
scale = Vector2(5, 1e-05)
pivot_offset = Vector2(127, 26)
texture = SubResource("10")
expand_mode = 5
stretch_mode = 4

[node name="H2" type="HBoxContainer" parent="V"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="stage" type="Label" parent="V/H2"]
layout_mode = 2
size_flags_vertical = 1
text = "20"
label_settings = SubResource("LabelSettings_toonj")
horizontal_alignment = 2
vertical_alignment = 2

[node name="level" type="Label" parent="V/H2"]
layout_mode = 2
size_flags_vertical = 1
text = " - 20"
label_settings = SubResource("LabelSettings_toonj")
horizontal_alignment = 2
vertical_alignment = 2

[node name="lap" type="Label" parent="V/H2"]
layout_mode = 2
size_flags_vertical = 1
text = "2"
label_settings = SubResource("LabelSettings_ffg50")
horizontal_alignment = 2

[node name="sep1" type="Control" parent="V"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label2" type="TextureRect" parent="V"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("5_geaak")
expand_mode = 5
stretch_mode = 6

[node name="hiscore" type="Label" parent="V"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_toonj")
horizontal_alignment = 2
vertical_alignment = 2

[node name="sep2" type="Control" parent="V"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label3" type="TextureRect" parent="V"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("6_2n3ts")
expand_mode = 5
stretch_mode = 6

[node name="score" type="Label" parent="V"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_toonj")
horizontal_alignment = 2
vertical_alignment = 2

[node name="sep3" type="Control" parent="V"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label4" type="TextureRect" parent="V"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("7_ngoxw")
expand_mode = 5
stretch_mode = 6

[node name="H" type="HBoxContainer" parent="V"]
layout_mode = 2
alignment = 2

[node name="deletedsqr" type="Label" parent="V/H"]
layout_mode = 2
size_flags_vertical = 1
text = "0"
label_settings = SubResource("LabelSettings_toonj")
horizontal_alignment = 2
vertical_alignment = 2

[node name="icon" type="Label" parent="V/H"]
layout_mode = 2
size_flags_vertical = 1
text = " â„¢"
label_settings = SubResource("LabelSettings_toonj")
horizontal_alignment = 2
vertical_alignment = 2

[node name="sep4" type="Control" parent="V"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="Label5" type="TextureRect" parent="V"]
custom_minimum_size = Vector2(220, 24)
layout_mode = 2
size_flags_horizontal = 8
texture = ExtResource("8_hu2ud")
expand_mode = 5
stretch_mode = 6

[node name="time" type="Label" parent="V"]
layout_mode = 2
text = "00:00"
label_settings = SubResource("LabelSettings_toonj")
horizontal_alignment = 2
vertical_alignment = 2
